# sacrifunk-loudness

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: sample_report.json  sample_report.md
src/sacrifunk_loudness/: __init__.py  __main__.py  analyzer.py  cli.py  mail.py  report.py
tests/: conftest.py  test_analyzer.py  test_mail.py  test_report.py
