[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sacrifunk-loudness"
version = "0.1.0"
description = "ITU-R BS.1770 LUFS + true-peak + crest + LRA analyzer with batch CLI, Markdown report, and optional email send"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Ahmed Abou-Elnasr", email = "info@sacrifunk.com" }]
keywords = ["audio", "loudness", "lufs", "true-peak", "mastering", "broadcast", "bs1770", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
  "click>=8.1",
  "numpy>=1.24",
  "scipy>=1.11",
  "pyloudnorm>=0.1.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "build>=1.2",
  "twine>=5.0",
]

[project.scripts]
sacrifunk-loudness = "sacrifunk_loudness.cli:main"

[project.urls]
Homepage = "https://github.com/sacrifunk/sacrifunk-loudness"
Issues = "https://github.com/sacrifunk/sacrifunk-loudness/issues"
Changelog = "https://github.com/sacrifunk/sacrifunk-loudness/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/sacrifunk_loudness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
filterwarnings = [
  "ignore::scipy.io.wavfile.WavFileWarning",
]
